# CROSS COMPILER SETTING
SET(CMAKE_SYSTEM_NAME Generic)
CMAKE_MINIMUM_REQUIRED (VERSION 3.10.0)

# THE VERSION NUMBER
SET (Tutorial_VERSION_MAJOR 1)
SET (Tutorial_VERSION_MINOR 0)

if (DEFINED ENV{SdkRootDirPath})
	SET(SdkRootDirPath "$ENV{SdkRootDirPath}")
endif()

if (NOT DEFINED SdkRootDirPath)
	MESSAGE(FATAL_ERROR "SDK path could not be determined. Please update SdkRootDirPath value from your CMake presets file(s).")
endif()

# ENABLE ASM
ENABLE_LANGUAGE(ASM)

# RESET FLAG VALUES
SET(CMAKE_ASM_FLAGS_DEBUG "")
SET(CMAKE_ASM_FLAGS_RELEASE "")
SET(CMAKE_C_FLAGS_DEBUG "")
SET(CMAKE_C_FLAGS_RELEASE "")
SET(CMAKE_CXX_FLAGS_DEBUG "")
SET(CMAKE_CXX_FLAGS_RELEASE "")
SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "")
SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "")

SET(CMAKE_STATIC_LIBRARY_PREFIX)
SET(CMAKE_STATIC_LIBRARY_SUFFIX)

SET(CMAKE_EXECUTABLE_LIBRARY_PREFIX)
SET(CMAKE_EXECUTABLE_LIBRARY_SUFFIX)

# CURRENT DIRECTORY
SET(ProjDirPath ${CMAKE_CURRENT_SOURCE_DIR})

SET(EXECUTABLE_OUTPUT_PATH ${ProjDirPath}/${CMAKE_BUILD_TYPE})
SET(LIBRARY_OUTPUT_PATH ${ProjDirPath}/${CMAKE_BUILD_TYPE})

set(CMAKE_USER_MAKE_RULES_OVERRIDE "user_override.cmake")

project(MKE18F16_inverter)
set(MCUX_SDK_PROJECT_NAME MKE18F16_inverter.elf)

include(${ProjDirPath}/flags.cmake)

add_executable(${MCUX_SDK_PROJECT_NAME} "${ProjDirPath}/CMSIS/mpu_armv7.h"
"${ProjDirPath}/CMSIS/core_cm4.h"
"${ProjDirPath}/CMSIS/cmsis_version.h"
"${ProjDirPath}/CMSIS/cmsis_iccarm.h"
"${ProjDirPath}/CMSIS/cmsis_gcc.h"
"${ProjDirPath}/CMSIS/cmsis_compiler.h"
"${ProjDirPath}/CMSIS/cmsis_armclang_ltm.h"
"${ProjDirPath}/CMSIS/cmsis_armclang.h"
"${ProjDirPath}/CMSIS/cmsis_armcc.h"
"${ProjDirPath}/CMSIS/arm_math.h"
"${ProjDirPath}/CMSIS/arm_const_structs.h"
"${ProjDirPath}/CMSIS/arm_common_tables.h"
"${ProjDirPath}/board/pin_mux.h"
"${ProjDirPath}/board/pin_mux.c"
"${ProjDirPath}/board/peripherals.h"
"${ProjDirPath}/board/peripherals.c"
"${ProjDirPath}/board/clock_config.h"
"${ProjDirPath}/board/clock_config.c"
"${ProjDirPath}/board/board.h"
"${ProjDirPath}/board/board.c"
"${ProjDirPath}/component/uart/uart.h"
"${ProjDirPath}/component/uart/lpuart_adapter.c"
"${ProjDirPath}/component/serial_manager/serial_port_uart.h"
"${ProjDirPath}/component/serial_manager/serial_port_uart.c"
"${ProjDirPath}/component/serial_manager/serial_port_swo.h"
"${ProjDirPath}/component/serial_manager/serial_port_swo.c"
"${ProjDirPath}/component/serial_manager/serial_port_internal.h"
"${ProjDirPath}/component/serial_manager/serial_manager.h"
"${ProjDirPath}/component/serial_manager/serial_manager.c"
"${ProjDirPath}/component/lists/generic_list.h"
"${ProjDirPath}/component/lists/generic_list.c"
"${ProjDirPath}/device/system_MKE18F16.h"
"${ProjDirPath}/device/system_MKE18F16.c"
"${ProjDirPath}/device/fsl_device_registers.h"
"${ProjDirPath}/device/MKE18F16_features.h"
"${ProjDirPath}/device/MKE18F16.h"
"${ProjDirPath}/drivers/fsl_wdog32.h"
"${ProjDirPath}/drivers/fsl_wdog32.c"
"${ProjDirPath}/drivers/fsl_trgmux.h"
"${ProjDirPath}/drivers/fsl_trgmux.c"
"${ProjDirPath}/drivers/fsl_smc.h"
"${ProjDirPath}/drivers/fsl_smc.c"
"${ProjDirPath}/drivers/fsl_rtc.h"
"${ProjDirPath}/drivers/fsl_rtc.c"
"${ProjDirPath}/drivers/fsl_rcm.h"
"${ProjDirPath}/drivers/fsl_rcm.c"
"${ProjDirPath}/drivers/fsl_pwt.h"
"${ProjDirPath}/drivers/fsl_pwt.c"
"${ProjDirPath}/drivers/fsl_port.h"
"${ProjDirPath}/drivers/fsl_pmc.h"
"${ProjDirPath}/drivers/fsl_pmc.c"
"${ProjDirPath}/drivers/fsl_pdb.h"
"${ProjDirPath}/drivers/fsl_pdb.c"
"${ProjDirPath}/drivers/fsl_lpuart.h"
"${ProjDirPath}/drivers/fsl_lpuart.c"
"${ProjDirPath}/drivers/fsl_lptmr.h"
"${ProjDirPath}/drivers/fsl_lptmr.c"
"${ProjDirPath}/drivers/fsl_lpit.h"
"${ProjDirPath}/drivers/fsl_lpit.c"
"${ProjDirPath}/drivers/fsl_gpio.h"
"${ProjDirPath}/drivers/fsl_gpio.c"
"${ProjDirPath}/drivers/fsl_ftm.h"
"${ProjDirPath}/drivers/fsl_ftm.c"
"${ProjDirPath}/drivers/fsl_ftfx_utilities.h"
"${ProjDirPath}/drivers/fsl_ftfx_flexnvm.h"
"${ProjDirPath}/drivers/fsl_ftfx_flexnvm.c"
"${ProjDirPath}/drivers/fsl_ftfx_flash.h"
"${ProjDirPath}/drivers/fsl_ftfx_flash.c"
"${ProjDirPath}/drivers/fsl_ftfx_features.h"
"${ProjDirPath}/drivers/fsl_ftfx_controller.h"
"${ProjDirPath}/drivers/fsl_ftfx_controller.c"
"${ProjDirPath}/drivers/fsl_ftfx_cache.h"
"${ProjDirPath}/drivers/fsl_ftfx_cache.c"
"${ProjDirPath}/drivers/fsl_ftfx_adapter.h"
"${ProjDirPath}/drivers/fsl_flash.h"
"${ProjDirPath}/drivers/fsl_ewm.h"
"${ProjDirPath}/drivers/fsl_ewm.c"
"${ProjDirPath}/drivers/fsl_edma.h"
"${ProjDirPath}/drivers/fsl_edma.c"
"${ProjDirPath}/drivers/fsl_dmamux.h"
"${ProjDirPath}/drivers/fsl_dmamux.c"
"${ProjDirPath}/drivers/fsl_dac32.h"
"${ProjDirPath}/drivers/fsl_dac32.c"
"${ProjDirPath}/drivers/fsl_crc.h"
"${ProjDirPath}/drivers/fsl_crc.c"
"${ProjDirPath}/drivers/fsl_common.h"
"${ProjDirPath}/drivers/fsl_common.c"
"${ProjDirPath}/drivers/fsl_clock.h"
"${ProjDirPath}/drivers/fsl_clock.c"
"${ProjDirPath}/drivers/fsl_adc12.h"
"${ProjDirPath}/drivers/fsl_adc12.c"
"${ProjDirPath}/freertos/freertos_kernel/timers.c"
"${ProjDirPath}/freertos/freertos_kernel/tasks.c"
"${ProjDirPath}/freertos/freertos_kernel/stream_buffer.c"
"${ProjDirPath}/freertos/freertos_kernel/queue.c"
"${ProjDirPath}/freertos/freertos_kernel/list.c"
"${ProjDirPath}/freertos/freertos_kernel/event_groups.c"
"${ProjDirPath}/freertos/freertos_kernel/croutine.c"
"${ProjDirPath}/freertos/freertos_kernel/include/timers.h"
"${ProjDirPath}/freertos/freertos_kernel/include/task.h"
"${ProjDirPath}/freertos/freertos_kernel/include/stream_buffer.h"
"${ProjDirPath}/freertos/freertos_kernel/include/stack_macros.h"
"${ProjDirPath}/freertos/freertos_kernel/include/semphr.h"
"${ProjDirPath}/freertos/freertos_kernel/include/queue.h"
"${ProjDirPath}/freertos/freertos_kernel/include/projdefs.h"
"${ProjDirPath}/freertos/freertos_kernel/include/portable.h"
"${ProjDirPath}/freertos/freertos_kernel/include/mpu_wrappers.h"
"${ProjDirPath}/freertos/freertos_kernel/include/mpu_prototypes.h"
"${ProjDirPath}/freertos/freertos_kernel/include/message_buffer.h"
"${ProjDirPath}/freertos/freertos_kernel/include/list.h"
"${ProjDirPath}/freertos/freertos_kernel/include/freertos_tasks_c_additions.h"
"${ProjDirPath}/freertos/freertos_kernel/include/event_groups.h"
"${ProjDirPath}/freertos/freertos_kernel/include/deprecated_definitions.h"
"${ProjDirPath}/freertos/freertos_kernel/include/croutine.h"
"${ProjDirPath}/freertos/freertos_kernel/include/atomic.h"
"${ProjDirPath}/freertos/freertos_kernel/include/StackMacros.h"
"${ProjDirPath}/freertos/freertos_kernel/include/FreeRTOS.h"
"${ProjDirPath}/freertos/freertos_kernel/portable/MemMang/heap_4.c"
"${ProjDirPath}/freertos/freertos_kernel/portable/GCC/ARM_CM4F/portmacro.h"
"${ProjDirPath}/freertos/freertos_kernel/portable/GCC/ARM_CM4F/port.c"
"${ProjDirPath}/libs/PCLIB/Include/pclib_types.h"
"${ProjDirPath}/libs/PCLIB/Include/pclib.h"
"${ProjDirPath}/libs/PCLIB/Include/PCLIB_CtrlPIandLPFilter_F16.h"
"${ProjDirPath}/libs/PCLIB/Include/PCLIB_CtrlPI_F16.h"
"${ProjDirPath}/libs/PCLIB/Include/PCLIB_CtrlPID_F16.h"
"${ProjDirPath}/libs/PCLIB/Include/PCLIB_Ctrl3P3Z_F16.h"
"${ProjDirPath}/libs/PCLIB/Include/PCLIB_Ctrl2P2Z_F16.h"
"${ProjDirPath}/libs/GFLIB/Include/gflib_types.h"
"${ProjDirPath}/libs/GFLIB/Include/gflib_FP.h"
"${ProjDirPath}/libs/GFLIB/Include/gflib.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_VectorLimit_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_VectorLimit_F16.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_UpperLimit_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_UpperLimit_F32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_UpperLimit_F16.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Tan_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Tan_F32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Sqrt_FLT_Asmi.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Sqrt_F32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Sqrt_F16.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_SinCos_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_SinCos_F32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Ramp_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Ramp_F32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Ramp_F16.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Lut_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Lut_F32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Lut_F16_Asmi.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_LutPer_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_LutPer_F32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_LutPer_F16_Asmi.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_LowerLimit_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_LowerLimit_F32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_LowerLimit_F16.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Limit_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Limit_F32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Limit_F16.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Integrator_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Integrator_A32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Hyst_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Hyst_F16_Asmi.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_FlexSRamp_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_FlexSRamp_A32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_FlexRamp_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_FlexRamp_A32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_DRamp_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_DRamp_F32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_DRamp_F16.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_DFlexRamp_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_DFlexRamp_A32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_CtrlPIp_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_CtrlPIp_A32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_CtrlPIDp_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_CtrlPIDp_A32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_CtrlBetaIPp_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_CtrlBetaIPp_A32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_CtrlBetaIPDp_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_CtrlBetaIPDp_A32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Atan_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Atan_F32.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_AtanYX_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_AtanYX_F16.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Asin_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Asin_F16.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Acos_FLT.h"
"${ProjDirPath}/libs/GFLIB/Include/GFLIB_Acos_F16.h"
"${ProjDirPath}/libs/GDFLIB/Include/gdflib_types.h"
"${ProjDirPath}/libs/GDFLIB/Include/gdflib_FP.h"
"${ProjDirPath}/libs/GDFLIB/Include/gdflib.h"
"${ProjDirPath}/libs/GDFLIB/Include/GDFLIB_FilterMA_FLT.h"
"${ProjDirPath}/libs/GDFLIB/Include/GDFLIB_FilterMA_A32.h"
"${ProjDirPath}/libs/GDFLIB/Include/GDFLIB_FilterIIR4_FLT.h"
"${ProjDirPath}/libs/GDFLIB/Include/GDFLIB_FilterIIR4_F32.h"
"${ProjDirPath}/libs/GDFLIB/Include/GDFLIB_FilterIIR3_FLT.h"
"${ProjDirPath}/libs/GDFLIB/Include/GDFLIB_FilterIIR3_F32.h"
"${ProjDirPath}/libs/GDFLIB/Include/GDFLIB_FilterIIR2_FLT.h"
"${ProjDirPath}/libs/GDFLIB/Include/GDFLIB_FilterIIR2_F32.h"
"${ProjDirPath}/libs/GDFLIB/Include/GDFLIB_FilterIIR1_FLT.h"
"${ProjDirPath}/libs/GDFLIB/Include/GDFLIB_FilterIIR1_F32_Asmi.h"
"${ProjDirPath}/libs/GDFLIB/Include/GDFLIB_FilterIIR1_F32.h"
"${ProjDirPath}/libs/GDFLIB/Include/GDFLIB_FilterExp_FLT.h"
"${ProjDirPath}/libs/GDFLIB/Include/GDFLIB_FilterExp_F32.h"
"${ProjDirPath}/libs/MLIB/Include/mlib_types.h"
"${ProjDirPath}/libs/MLIB/Include/mlib_FP.h"
"${ProjDirPath}/libs/MLIB/Include/mlib.h"
"${ProjDirPath}/libs/MLIB/Include/asm_mac.h"
"${ProjDirPath}/libs/MLIB/Include/RTCESL_cfg.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sub_FLT.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sub_F64.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sub_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sub_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sub_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sub_F16.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sub_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sub4_FLT.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sub4_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sub4_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sign_FLT_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sign_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sign_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Shift_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Shift_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Shift_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Shift_F16.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Sat_A32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Rnd_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Rnd_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Rcp_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Rcp1Q_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Neg_FLT.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Neg_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Neg_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Neg_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Neg_F16.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mul_FLT.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mul_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mul_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mul_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mul_F16.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mul_A32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mul_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MulRnd_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MulRnd_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MulRnd_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MulRnd_F16.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MulRnd_A32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MulRnd_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Msu_FLT.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Msu_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Msu_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Msu_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MsuRnd_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MsuRnd_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MsuRnd_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MsuRnd_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Msu4_FLT.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Msu4_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Msu4_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Msu4Rnd_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Msu4Rnd_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Msu4Rnd_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Msu4Rnd_F16.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mnac_FLT.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mnac_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mnac_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mnac_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mnac_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MnacRnd_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MnacRnd_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MnacRnd_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MnacRnd_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mac_FLT.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mac_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mac_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mac_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mac_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MacRnd_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MacRnd_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MacRnd_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_MacRnd_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mac4_FLT.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mac4_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mac4_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mac4Rnd_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mac4Rnd_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Mac4Rnd_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Log2_U16.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Div_FLT.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Div_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Div_F16.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Div_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Div1Q_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Div1Q_F16.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Div1Q_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Conv_FLT_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Conv_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_ConvSc_FLT_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Clb_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Clb_F16.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_BiShift_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_BiShift_F16.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Add_FLT.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Add_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Add_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Add_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Add_F16.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Add_A32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Add4_FLT.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Add4_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Add4_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Abs_FLT_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Abs_FLT.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Abs_F32_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Abs_F32.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Abs_F16_Asmi.h"
"${ProjDirPath}/libs/MLIB/Include/MLIB_Abs_F16.h"
"${ProjDirPath}/libs/GMCLIB/Include/gmclib_types.h"
"${ProjDirPath}/libs/GMCLIB/Include/gmclib_FP.h"
"${ProjDirPath}/libs/GMCLIB/Include/gmclib.h"
"${ProjDirPath}/libs/GMCLIB/Include/GMCLIB_Svm_F16.h"
"${ProjDirPath}/libs/GMCLIB/Include/GMCLIB_Park_FLT.h"
"${ProjDirPath}/libs/GMCLIB/Include/GMCLIB_Park_F16_Asmi.h"
"${ProjDirPath}/libs/GMCLIB/Include/GMCLIB_ElimDcBusRip_FLT.h"
"${ProjDirPath}/libs/GMCLIB/Include/GMCLIB_ElimDcBusRip_F16_Asmi.h"
"${ProjDirPath}/libs/GMCLIB/Include/GMCLIB_ElimDcBusRip_A32_Asmi.h"
"${ProjDirPath}/libs/GMCLIB/Include/GMCLIB_Decoupling_FLT.h"
"${ProjDirPath}/libs/GMCLIB/Include/GMCLIB_Decoupling_A32.h"
"${ProjDirPath}/libs/GMCLIB/Include/GMCLIB_DTCompLut1D_F16.h"
"${ProjDirPath}/libs/GMCLIB/Include/GMCLIB_Clark_FLT.h"
"${ProjDirPath}/libs/GMCLIB/Include/GMCLIB_Clark_F16_Asmi.h"
"${ProjDirPath}/libs/AMCLIB/Include/amclib_types.h"
"${ProjDirPath}/libs/AMCLIB/Include/amclib_FP.h"
"${ProjDirPath}/libs/AMCLIB/Include/amclib.h"
"${ProjDirPath}/libs/AMCLIB/Include/AMCLIB_TrackObsrv_FLT.h"
"${ProjDirPath}/libs/AMCLIB/Include/AMCLIB_TrackObsrv_F32.h"
"${ProjDirPath}/libs/AMCLIB/Include/AMCLIB_PMSMBemfObsrvDQ_FLT.h"
"${ProjDirPath}/libs/AMCLIB/Include/AMCLIB_PMSMBemfObsrvDQ_A32.h"
"${ProjDirPath}/libs/AMCLIB/Include/AMCLIB_PMSMBemfObsrvAB_FLT.h"
"${ProjDirPath}/libs/AMCLIB/Include/AMCLIB_PMSMBemfObsrvAB_A32.h"
"${ProjDirPath}/libs/AMCLIB/Include/AMCLIB_CtrlFluxWkng_FLT.h"
"${ProjDirPath}/libs/AMCLIB/Include/AMCLIB_CtrlFluxWkng_A32.h"
"${ProjDirPath}/libs/AMCLIB/Include/AMCLIB_AngleTrackObsrv_FLT.h"
"${ProjDirPath}/libs/AMCLIB/Include/AMCLIB_AngleTrackObsrv_F32.h"
"${ProjDirPath}/libs/AMCLIB/Include/AMCLIB_ACIMSpeedMRAS_FLT.h"
"${ProjDirPath}/libs/AMCLIB/Include/AMCLIB_ACIMRotFluxObsrv_FLT.h"
"${ProjDirPath}/libs/AMCLIB/Include/AMCLIB_ACIMCtrlMTPA_FLT.h"
"${ProjDirPath}/source/semihost_hardfault.c"
"${ProjDirPath}/source/MKE18F16_inverter.c"
"${ProjDirPath}/source/FreeRTOSConfig.h"
"${ProjDirPath}/source/inverter/sine_gen.h"
"${ProjDirPath}/source/inverter/sine_gen.c"
"${ProjDirPath}/source/inverter/pi_ctrl.h"
"${ProjDirPath}/source/inverter/pi_ctrl.c"
"${ProjDirPath}/source/inverter/ftm_spwm_dma.h"
"${ProjDirPath}/source/inverter/ftm_spwm_dma.c"
"${ProjDirPath}/source/inverter/board_init_ext.h"
"${ProjDirPath}/source/inverter/board_init_ext.c"
"${ProjDirPath}/source/inverter/app_buttons_led.h"
"${ProjDirPath}/source/inverter/app_buttons_led.c"
"${ProjDirPath}/startup/startup_mke18f16.c"
"${ProjDirPath}/utilities/fsl_str.h"
"${ProjDirPath}/utilities/fsl_str.c"
"${ProjDirPath}/utilities/fsl_debug_console_conf.h"
"${ProjDirPath}/utilities/fsl_debug_console.h"
"${ProjDirPath}/utilities/fsl_debug_console.c"
)




if(${LIBRARY_TYPE} STREQUAL "REDLIB")
    target_include_directories(${MCUX_SDK_PROJECT_NAME} PRIVATE $ENV{ARMGCC_DIR}/redlib/include)
endif()

set(c_include_directories "${ProjDirPath}/utilities"
"${ProjDirPath}/drivers"
"${ProjDirPath}/board"
"${ProjDirPath}/component/lists"
"${ProjDirPath}/component/serial_manager"
"${ProjDirPath}/CMSIS"
"${ProjDirPath}/freertos/freertos_kernel/include"
"${ProjDirPath}/device"
"${ProjDirPath}/freertos/freertos_kernel/portable/GCC/ARM_CM4F"
"${ProjDirPath}/"
"${ProjDirPath}/source"
"${ProjDirPath}/source/inverter"
"${ProjDirPath}/component/uart"
"${ProjDirPath}/libs/AMCLIB/Include"
"${ProjDirPath}/libs/GDFLIB/Include"
"${ProjDirPath}/libs/GFLIB/Include"
"${ProjDirPath}/libs/GMCLIB/Include"
"${ProjDirPath}/libs/MLIB/Include"
"${ProjDirPath}/libs/PCLIB/Include"
)


target_include_directories(${MCUX_SDK_PROJECT_NAME} PRIVATE $<$<COMPILE_LANGUAGE:C>:${c_include_directories}>)

set(cpp_include_directories "")


target_include_directories(${MCUX_SDK_PROJECT_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:${cpp_include_directories}>)

set(include_files "")


target_precompile_headers(${MCUX_SDK_PROJECT_NAME} PRIVATE ${include_files})

set(link_directories "${ProjDirPath}/libs/AMCLIB"
"${ProjDirPath}/libs/GMCLIB"
"${ProjDirPath}/libs/GFLIB"
"${ProjDirPath}/libs/GDFLIB"
"${ProjDirPath}/libs/MLIB"
"${ProjDirPath}/libs/PCLIB"
"${ProjDirPath}/libs"
)


set(link_libraries "AMCLIB"
"GMCLIB"
"GFLIB"
"GDFLIB"
"MLIB"
"PCLIB"
"arm_cortexM4lf_math"
"arm_cortexM7l_math"
)


target_link_directories(${MCUX_SDK_PROJECT_NAME} PRIVATE ${link_directories})
target_link_libraries(${MCUX_SDK_PROJECT_NAME} PRIVATE -Wl,--start-group)
target_link_libraries(${MCUX_SDK_PROJECT_NAME} PRIVATE ${TARGET_LINK_SYSTEM_LIBRARIES} ${link_libraries})
target_link_libraries(${MCUX_SDK_PROJECT_NAME} PRIVATE -Wl,--end-group)





